--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1617,7 +1617,7 @@
                             <input 
                                 type="text" 
                                 x-model="searchQuery"
-                                @input="searchNotes()"
+                                @input="debouncedSearchNotes()"
                                 :placeholder="t('sidebar.search_placeholder')"
                                 class="w-full px-2 py-1.5 pl-7 pr-7 text-xs rounded focus:outline-none focus:ring-1"
                                 style="background-color: var(--bg-primary); color: var(--text-primary); border: 1px solid var(--border-primary);"
@@ -1676,7 +1676,12 @@
                 </template>
             </div>
                         </template>
-                        <template x-if="searchQuery.trim() && searchResults.length === 0">
+                        <template x-if="searchQuery.trim() && isSearching">
+                            <div class="p-6 text-center">
+                                <p class="text-sm" style="color: var(--text-tertiary);" x-text="t('search.searching', {query: searchQuery})"></p>
+                            </div>
+                        </template>
+                        <template x-if="searchQuery.trim() && !isSearching && searchResults.length === 0">
                             <div class="p-6 text-center">
                                 <svg class="w-12 h-12 mx-auto mb-3 opacity-40" style="color: var(--text-tertiary);" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
